--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "firebase": "^10.8.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+    "@angular/fire": "17.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.2.3",
