--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3",
-    "@angular/fire": "17.0.1",
-    "firebase-admin": "12.0.0"
+    "@angular/fire": "17.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.2.3",
